@@ -6,7 +6,8 @@ libgslieeeutils_a_SOURCES = endian.c print.c standardize.c \
 	make_rep.c gsl_ieee_utils.h ieee_utils.h \
 	env.c fp.c read.c
 
-noinst_HEADERS = fp-hpux.c fp-linux.c fp-sunos4.c fp-solaris.c fp-unknown.c
+noinst_HEADERS = fp-hpux.c fp-linux.c fp-sunos4.c fp-solaris.c fp-tru64.c \
+        fp-unknown.c
 
 INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../err
 
